Changed the way AF_TOTAL works to allow to display sum of atkBoolean attributes. Instead of 'list' the $mode will be 'total'. So this can be a breaking change.

--- a/languages/it.lng
+++ b/languages/it.lng
@@ -228,7 +228,7 @@ $it = array(
     "lock_locked" => "I record selezionati non sono accessibili perchè in modifica da parte di un altro utente.",
     "logged_in_as" => "Autenticato come",
     "login" => "Login",
-    "login_failed" => "Login fallito",
+    "login_failed" => "Login fallito.",
     "login_form" => "Login",
     "logout" => "Esci",
     "lose_changes_warning" => "Se abbandoni questa pagina, tutte le modifiche andranno perse.",
