--- a/languages/en.lng
+++ b/languages/en.lng
@@ -27,11 +27,11 @@ $en = array(
     "alphabeticchars" => "alphabetic characters",
     "apply" => "Apply",
     "app_close" => "Close",
-    "app_description" => "Welcome to this ATK application.",
+    "app_description" => atkconfig("app_description", "Welcome to this ATK application."),
     "app_launcher" => "ATK Application Launcher",
     "app_reopen" => "Restart",
-    "app_shorttitle" => "ATKApp",
-    "app_title" => "ATK Application",
+    "app_shorttitle" => atkconfig("app_shorttitle", "ATKApp"),
+    "app_title" => atkconfig("app_title", "ATK Application"),
     "apr" => "Apr",
     "april" => "April",
     "attributeedit" => "Update value",
